# agentops

./: .env  .env.bak  .gitignore  ADDING_APM.md  ADDING_PROMETHEUS_EXPORTER.md  AGENTS.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  TENETS.md  docker-compose.examples.yml  docker-compose.otel-demo.yml  docker-compose.yml  foo.yml  install.sh  opensearch-PROPOSAL-TEMPLATE-COMPLETED.md  opensearch-PROPOSAL-TEMPLATE.md  opensearch-repository-request-COMPLETED.md  opensearch-repository-request.md  sync.sh
.github/: CODEOWNERS
docker-compose/: .env  README.md  docker-compose.yml  ism-policy.json
docker-compose/canary/: Dockerfile  README.md  canary.py
docker-compose/data-prepper/: data-prepper-config.yaml  pipelines.yaml
docs/: fault-injection-design.md  genai-instrumentation-comparison.md  instrumentation-comparison.md  telemetry-examples-design.md
examples/langchain/instrumentation-comparison/langfuse-eval/: main.py  pyproject.toml
examples/langchain/instrumentation-comparison/langfuse-eval/langfuse_eval_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/langchain/instrumentation-comparison/openinference/: Dockerfile  main.py  pyproject.toml
examples/langchain/instrumentation-comparison/openinference/langchain_weather_openinference.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/langchain/instrumentation-comparison/otel-contrib/: Dockerfile  main.py  pyproject.toml
examples/langchain/instrumentation-comparison/otel-contrib/weather_agent_otel_contrib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/plain-agents/: Dockerfile  (+3 more)
(+89 files in other folders)
