[project]
name = "langchain-weather-openinference"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "langchain-aws>=0.2.0",
    "langchain-core>=0.3.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "openinference-instrumentation-langchain>=0.1.0",
]
